--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ With a strong understanding of modern tools and design principles, I craft exper
             <button class="c-btn h-btn mt-3 py-3 px-5 rounded-pill">
               <!-- here download attribute is used for adding download functionality to button  -->
               <a
-                href="Entry Level Web Developer Resume.pdf"
+                href="https://github.com/vijayalakshmish/web-portfolio/blob/main/UIUX_Resume.docx"
                 download="SampleCV"
                 style="text-decoration: none;color: #fff;"
                 >Download CV</a
@@ -899,3 +899,4 @@ With a strong understanding of modern tools and design principles, I craft exper
     
   </body>
 </html>
+
