Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ With a strong understanding of modern tools and design principles, I craft exper
               <!-- here download attribute is used for adding download functionality to button  -->
               <a
                 href="\responsive\UIUX_Resume.docx"
-                download="SampleCV"
+                download="\responsive\UIUX_Resume.docx"
                 style="text-decoration: none;color: #fff;"
                 >Download CV</a
               >
@@ -899,5 +899,6 @@ With a strong understanding of modern tools and design principles, I craft exper
     
   </body>
 </html>
+
 
 
